# mujoco_rl

./: .gitignore  CLAUDE.md  LICENSE  MJMODEL.TXT  MUJOCO_LOG.TXT  README.md  activate_venv.sh  main.py  mjmodel.mjb  pyproject.toml  requirements.txt  task.py
assets/: object_to_load.xml  shared.xml  table_push.xml  table_push_OLD.xml
assets/meshes/: pusher_link.stl
assets/object_sim/: box.xml  box_exp.xml  flash.xml  stanfordbunny.xml
assets/object_sim/raw_files/: common.xml
assets/robot/: robot.xml
data/checkpoints/: vla_bc.pt
data/vla/checkpoints/: bc_only_states.pt
environment/: __init__.py  default.yaml  env.py  scene.py
models/: __init__.py  policy.py
outputs/checkpoints/: bc_only_states.pt  vla_bc.pt
robot/assets/: scene_template.xml
robot/assets/objects/: sort_cube.xml
robot/assets/robot/: robot.xml
robot/controllers/: __init__.py  hw1_oracle_policy.py  robot.py
scripts/: __init__.py  bc_walkthrough.py  collect_sim_data.py  common.py  diagnose_conditioning.py  eval_policy.py  main.ipynb  render_opts.py  runtime.py  test_obj.py  train_bc.py
scripts/old_scripts_backups/: main_all_controllers.ipynb  main_backup_full.ipynb  robot_controller_all_controllers.py
scripts/utils/: com_estimation.py  helper_fns.py  model_selection.py  render_opts.py  robot_controller.py
src/mujoco_irb120/: __init__.py  main.py
src/mujoco_irb120.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mujoco_irb120/VLA/: README.md  __init__.py  hw1_constants.py  main.py  task.py
src/mujoco_irb120/assets/: main.xml  (+5 more)
util/: helper_fns.py  visualize_robot.py
(+68 files in other folders)
