[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-irb120"
version = "0.1.0"
description = "MuJoCo IRB120 experimentation, analysis, and push-selection utilities"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mujoco_irb120*"]
